syntax = "proto3";
//protoc ./balance.proto --go_out=plugins=grpc:../pb
package balance;

// Interface exported by the server.
service Balance {
  // Deduct
  rpc Deduct(stream DeductRequest) returns (DeductResponse) {}

}

// DeductrRequest
message DeductRequest {
  string userID = 1;
  string productID = 2;
  string price = 3;
}


message DeductResponse {
  string balance = 1;
  Result result = 2;
}

// 返回码与返回状态
message Result {
	int64 code = 1;
	string msg = 2;
}
